<?xml version="1.0" encoding="utf-8"?>
<!-- Author: u7603590, Jiawei Niu -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.loginPages.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rectangle_blue" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/UserName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/edittext_white"
        android:ems="30"
        android:hint="Email"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline"
        app:layout_constraintWidth_percent="0.7" />


    <EditText
        android:id="@+id/UserPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/edittext_white"
        android:ems="30"
        android:hint="Password"
        android:inputType="text"
        android:password="true"
        app:layout_constraintBottom_toBottomOf="@id/UserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.847"
        app:layout_constraintWidth_percent="0.7" />

    <Button
        android:id="@+id/SignIN"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/edittext_white"
        android:text="LOGIN"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/UserPassword"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent="0.3" />

    <TextView
        android:id="@+id/UserSignUp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:text="Don’t have an account?"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/GoToSignUP"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignIN"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/GoToSignUP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:text="SIGN UP"
        app:layout_constraintBottom_toBottomOf="@+id/UserSignUp"
        app:layout_constraintStart_toEndOf="@+id/UserSignUp"
        app:layout_constraintTop_toTopOf="@+id/UserSignUp"
        android:background="@drawable/edittext_white" />

    <TextView
        android:id="@+id/aussic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:text="AUSSIC"
        android:textSize="30sp"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.4" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="ToggleButton"
        android:textSize="10sp"
        app:constraint_referenced_ids="toggleButton"
        app:layout_constraintStart_toEndOf="@+id/UserPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/UserPassword"
        app:layout_constraintBottom_toBottomOf="@+id/UserPassword"
        app:layout_constraintWidth_percent="0.12"
        app:layout_constraintHeight_percent="0.05"/>

</androidx.constraintlayout.widget.ConstraintLayout>