<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:title="Home"
        android:icon="@drawable/baseline_home_24"/>


    <item
        android:title=""/>


    <item
        android:id="@+id/user_profile"
        android:title="My"
        android:icon="@drawable/baseline_account_circle_24" />

    <item
        android:id="@+id/menu_none"
        android:enabled="false"
        android:visible="false" />

</menu>